# WEWE-solana-programs

./: ADMIN_SECURITY_GUIDE.md  Anchor.toml  KEYPAIRS_GUIDE.md  MILESTONE_FLOW_ANALYSIS.md  README.md  package-lock.json  package.json
.github/workflows/: anchor-test.yml
idls/: cp_amm.json  dlmm.json  dynamic_amm.json
programs/wewe-token-launch-pad/: Cargo.toml
programs/wewe-token-launch-pad/src/: const_pda.rs  constant.rs  errors.rs  event.rs  lib.rs
programs/wewe-token-launch-pad/src/instructions/: back_token.rs  backtoken.rs  claim.rs  collect_pool_fees.rs  create_pool.rs  create_token.rs  customizable_permisionless_pool.rs  distribute_token.rs  ix_airdrop.rs  ix_back_token.rs  ix_claim_tokens.rs  ix_create_metadata.rs  ix_create_proposal.rs  ix_decrement_backer_count.rs  ix_launch_pool.rs  ix_refund.rs  mint_nft.rs  mod.rs  proposal.rs  refund.rs  reject_proposal.rs
programs/wewe-token-launch-pad/src/instructions/admin/: ix_airdrop.rs  ix_burn_and_update_airdrop_cycle.rs  ix_collect_pool_fees.rs  ix_emergency_unlock.rs  ix_end_milestone.rs  ix_mint_non_transferable_ft.rs  ix_reject_proposal.rs  ix_reset_airdrop.rs  ix_reset_pool_launch.rs  ix_set_config.rs  ix_snapshot.rs  ix_start_milestone.rs  ix_update_airdrop_amount.rs  ix_update_transfer_fee.rs  mod.rs
programs/wewe-token-launch-pad/src/state/: backer_proposal_count.rs  backers.rs  config.rs  maker.rs  mod.rs  proposal.rs  proposer.rs
programs/wewe-token-launch-pad/src/utils/: check_configure_authority.rs  mod.rs  only_owner.rs  pool_liqudity.rs  pool_validation.rs
tests/: cp_amm.ts  set-config.ts  utils.ts  wewe-token-launch-pad.ts
trident-tests/: Cargo.toml  Trident.toml
trident-tests/fuzz_0/: fuzz_accounts.rs  test_fuzz.rs  types.rs
trident-tests/fuzz_0/instructions/: airdrop.rs  claim_milestone_reward.rs  claim_pool_fee.rs  create_pool.rs  create_proposal.rs  deposit_sol.rs  end_milestone.rs  initialise_milestone.rs  mint_soulbound_to_user.rs  mod.rs  refund.rs  reject_proposal.rs  set_config.rs  snapshot_backer_amount.rs
trident-tests/fuzz_0/transactions/: airdrop.rs  claim_milestone_reward.rs  claim_pool_fee.rs  create_proposal.rs  deposit_sol.rs  end_milestone.rs  initialise_milestone.rs  mint_soulbound_to_user.rs  reject_proposal.rs  set_config.rs  snapshot_backer_amount.rs
