[package]
name = "wewe-token-launch-pad"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "contracts"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
dynamic-amm = { git = "https://github.com/mercurial-finance/mercurial-dynamic-amm-sdk", features = [
    "cpi",
], rev = "85313c5e56a974d05feb533d986c60be1350cbf4" }
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
solana-program = "1.16.0"
