[package]
name = "wewe-token-launch-pad"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "contracts"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
dynamic-amm = { git = "https://github.com/MeteoraAG/dynamic-amm-sdk", features = [
    "cpi",
], rev = "997df950fbd6fa64e1228f38acb4419adeed0b55", package = "dynamic-amm" }
dynamic-amm-common = { git = "https://github.com/MeteoraAG/dynamic-amm-sdk", rev = "997df950fbd6fa64e1228f38acb4419adeed0b55", package = "common" }
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
solana-program = "1.16.0"
