[package]
name = "wewe-token-launch-pad"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wewe_token_launch_pad"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["metadata",  "token_2022_extensions"]}
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
solana-program = "2.1.0"
const-crypto = "0.3.0"
ruint = "1.17.0"
cp-amm = { git = "https://github.com/MeteoraAg/damm-v2", branch = "main", package = "cp-amm", features = ["cpi", "local"] }